--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="style/style.css" rel="stylesheet">
+    <link href="Style/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cantarell&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="#Who-i-am">Who i am</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Student-life">My education</a>
+                        <a class="nav-link" href="#Education">My Education</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Hobbies">Hobbies</a>
@@ -79,21 +79,22 @@
         </div>
     </div>
 
-    <div class="container" id="Student-life">
-      <h1>My student life</h1>
+    <div class="container" id="Education">
+      <h1>My Education</h1>
+      <br>
       <div class="row">
         <div class="col-sm-4 r">
-            <img class="rounded" src="./images/sl1.jpg" alt="Gimnasio los ocobos" onclick="changeText(1)" />
+            <img class="rounded" src="./Images/sl1.jpg" alt="Gimnasio los ocobos" onclick="changeText(1)" />
         </div>
         <div class="col-sm-4">
-          <img class="rounded" src="./images/sl2.png" alt=" Miami dade college" onclick="changeText(2)" >
+          <img class="rounded" src="./Images/sl2.png" alt=" Miami dade college" onclick="changeText(2)" >
         </div>
         <div class="col-sm-4">
-          <img class="rounded" src="./images/sl3.png" alt=" Universidad de los andes" onclick="changeText(3)">
+          <img class="rounded" src="./Images/sl3.png" alt=" Universidad de los andes" onclick="changeText(3)">
         </div>
       </div>
     </div>
-
+    <br>
     <div class="container text-center">
       <div class="parrafos" id="div">
           <p>
@@ -111,9 +112,10 @@
           Regarding what I like to do I have 3 favorite hobbies, when I am doing some of them I feel quite free because they are activities that fill me with happiness and recharge me with good energy. 
         </p>
       </div>
+      <br>
       <div class="row">
         <div class="col-sm-4"> 
-          <img src="./images/sport2.jpeg" alt="direccion1">
+          <img src="./Images/sport2.jpeg" alt="direccion1">
         </div>
         <div class="col-sm-4"> 
           <p class="parrafos">
@@ -124,7 +126,7 @@
           </p>
         </div>
         <div class="col-sm-4"> 
-          <img src="./images/sport3.jpeg" alt="direccion3">
+          <img src="./Images/sport3.jpeg" alt="direccion3">
         </div>
         <div class="col-sm-4"> 
           <p class="parrafos">
@@ -136,7 +138,7 @@
           </p>
         </div>
         <div class="col-sm-4"> 
-          <img src="./images/cod.jpg" alt="direccion3">
+          <img src="./Images/cod.jpg" alt="direccion3">
         </div>
         <div class="col-sm-4"> 
           <p class="parrafos">
