--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="container">
       <div class="row">
-          <img src="./images/panoramica.jpeg" alt="Banner photo" id="panoramica">
+          <img src="./Images/panoramica.jpeg" alt="Banner photo" id="panoramica">
       </div>
     </div>
   
@@ -74,7 +74,7 @@
             </p>
           </div>
           <div class="col-sm-4">
-            <img id="profile-img" class="img-fluid" src="./images/perfil.jpeg" alt="My photo">
+            <img id="profile-img" class="img-fluid" src="./Images/perfil.jpeg" alt="My photo">
           </div>
         </div>
     </div>
