--- a/hojavida.html
+++ b/hojavida.html
@@ -9,6 +9,9 @@
     <link href="style/hojavida.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cantarell&display=swap" rel="stylesheet">
+
     <title>Juan Sebastian Vaca</title>
     
   </head>
@@ -29,17 +32,17 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" id="Knowledge">
       <h1 class="header">Knowledge in:</h1>
       <div class="list-group">
         <a href="https://www.conasa.es/blog/business-intelligence-y-big-data-son-lo-mismo/" class="list-group-item" target="_Blank">Bussines intelligence</a>
         <a href="https://www.sas.com/es_co/campaigns/analytics/data-mining-from-a-z-104937.html?gclid=CjwKCAiAg9rxBRADEiwAxKDTuotsIab6K85mIXA6gdgSr-oPkMqSkbAgj_YniAs6sjh2KJyFzSnqphoC1_gQAvD_BwE" class="list-group-item" target="_Blank"> Data Minning</a>
         <a href="https://www.powerdata.es/big-data" class="list-group-item" target="_Blank"> Big data</a>
-        <a href="http://www.businessdictionary.com/definition/front-end-application.html" class="list-group-item" target="_Blank"> front end aplications</a>
+        <a href="http://www.businessdictionary.com/definition/front-end-application.html" class="list-group-item" target="_Blank"> Front end aplications</a>
       </div>
     </div>
  
-    <div class="container">
+    <div class="container" id="Programming">
         <h1 class="header">PROGRAMMING SKILLS</h1>
             <table>
                 <tr>
@@ -50,32 +53,32 @@
                 </tr>
                 <tr>
                     <td>Java</td>
-                    <td><i class="fa fa-remove"></i></td>
-                    <td><i class="fa fa-remove"></i></td>
                     <td><i class="fa fa-check"></i></td>
-                </tr>
+                    <td><i class="fa fa-check"></i></td>
+                    <td><i class="fa fa-check"></i></td>
+                </tr>i 
                 <tr>
                     <td>Python</td>
                     <td><i class="fa fa-check"></i></td>
-                    <td><i class="fa fa-remove"></i></td>
                     <td><i class="fa fa-check"></i></td>
+                    <td><i class="fa fa-remove"></i></td>
                 </tr>
                 <tr>
                     <td>JavaScript</td>
                     <td><i class="fa fa-check"></i></td>
                     <td><i class="fa fa-remove"></i></td>
-                    <td><i class="fa fa-check"></i></td>
+                    <td><i class="fa fa-remove"></i></td>
                 </tr>
                 <tr>
                     <td>Dart</td>
-                    <td><i class="fa fa-remove"></i></td>
-                    <td><i class="fa fa-remove"></i></td>
                     <td><i class="fa fa-check"></i></td>
+                    <td><i class="fa fa-remove"></i></td>
+                    <td><i class="fa fa-remove"></i></td>
                 </tr>
                 <tr>
                     <td>HTML</td>
                     <td><i class="fa fa-check"></i></td>
-                    <td><i class="fa fa-remove"></i></td>
+                    <td><i class="fa fa-check"></i></td>
                     <td><i class="fa fa-check"></i></td>
                 </tr>
             </table> 
@@ -84,35 +87,35 @@
     <div class="container" id="Projects">
       <div class="text-left">
         <h1>
-          Hobbies
+          My projects
         </h1>
-        <p class="parrafos"> 
-          Regarding what I like to do I have 3 favorite hobbies, when I am doing some of them I feel quite free because they are activities that fill me with happiness and recharge me with good energy. 
+        <p class="parrafosp"> 
+          In this section you are go ing to find some of the projects in which i worked.
         </p>
       </div>
       <div class="row">
         <div class="col-sm-6"> 
-          <img src="./images/sport2.jpeg" alt="direccion1">
+          <img src="./Images/project1.jfif" alt="direccion1">
         </div>
         <div class="col-sm-6"> 
-          <img src="./images/sport3.jpeg" alt="direccion3">
+          <img src="./Images/project2.png" alt="direccion3">
         </div>
         <div class="col-sm-6"> 
-          <p class="parrafos">
-            I started practicing rugby 2 years ago in college,
-            where I developed a great interest in this sport 
-            that motivated me to play it professionally. I am
-            part of the team of the university and I am a 
-            player of Rams RC Rugby team of the Bogota League.
+          <p class="parrafosp">
+            I am currently working on my degree project. 
+            In which we are developing probabilistic models
+            to predict an epileptic attack. All our research
+            is based on data mining in order to identify 
+            patterns that allow us to be used for accurate 
+            analysis and conclusions.
           </p>
         </div>
         <div class="col-sm-6"> 
-          <p class="parrafos">
-            I started practicing rugby 2 years ago in college,
-            where I developed a great interest in this sport 
-            that motivated me to play it professionally. I am
-            part of the team of the university and I am a 
-            player of Rams RC Rugby team of the Bogota League.
+          <p class="parrafosp">
+            I worked on a project for a company called Nidoo
+            where our main objective was to improve and 
+            implement quality attributes compared to the
+            services offered by the company.
           </p>
         </div>
       </div>    
