--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cantarell&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coming+Soon&display=swap" rel="stylesheet">
 
     <script src="Script/s.js"></script>
     <title>Juan Sebastian Vaca</title>   
@@ -42,7 +43,7 @@
                         <a class="nav-link" href="#Contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a aria-label="Github link 3" class="nav-link" href="./hojavida.html" target="_self"  rel="noreferrer">Hoja</a>
+                        <a aria-label="Github link 3" class="nav-link" href="./hojavida.html" target="_self"  rel="noreferrer">Skills</a>
                     </li>
                 </ul>
             </div>
@@ -118,7 +119,7 @@
           <img src="./Images/sport2.jpeg" alt="direccion1">
         </div>
         <div class="col-sm-4"> 
-          <p class="parrafos">
+          <p class="parrafosHobbie">
             Since I was 8 years old I developed a hobby to 
             play video games especially call of duty a first 
             person shooter from which I have bought most of 
@@ -129,7 +130,7 @@
           <img src="./Images/sport3.jpeg" alt="direccion3">
         </div>
         <div class="col-sm-4"> 
-          <p class="parrafos">
+          <p class="parrafosHobbie">
             I started practicing rugby 2 years ago in college,
             where I developed a great interest in this sport 
             that motivated me to play it professionally. I am
@@ -141,7 +142,7 @@
           <img src="./Images/cod.jpg" alt="direccion3">
         </div>
         <div class="col-sm-4"> 
-          <p class="parrafos">
+          <p class="parrafosHobbie">
              Football is another of my favorite hobbies, as it
              is a way to release all the energy. I trained in 
              soccer academies since I was 6 years old which 
