--- a/hojavida.html
+++ b/hojavida.html
@@ -56,7 +56,7 @@
                     <td><i class="fa fa-check"></i></td>
                     <td><i class="fa fa-check"></i></td>
                     <td><i class="fa fa-check"></i></td>
-                </tr>i 
+                </tr> 
                 <tr>
                     <td>Python</td>
                     <td><i class="fa fa-check"></i></td>
@@ -90,7 +90,8 @@
           My projects
         </h1>
         <p class="parrafosp"> 
-          In this section you are go ing to find some of the projects in which i worked.
+          In this section you are go ing to find some 
+          of the projects in which i worked and i am still working on.
         </p>
       </div>
       <div class="row">
