--- a/hojavida.html
+++ b/hojavida.html
@@ -15,7 +15,10 @@
     <title>Juan Sebastian Vaca</title>
     
   </head>
+
   <body>
+
+  <!-- Header Start -->  
     <nav class="navbar navbar-expand-md navbar-dark bg-dark static-top">
         <div class="container">
             <a class="navbar-brand" href="./index.html"> Juan sebastian Vaca</a>
@@ -31,7 +34,9 @@
             </div>
         </div>
     </nav>
+  <!-- Header Finish --> 
 
+  <!-- Knowledge Start -->   
     <div class="container" id="Knowledge">
       <h1 class="header">Knowledge in:</h1>
       <div class="list-group">
@@ -41,9 +46,11 @@
         <a href="http://www.businessdictionary.com/definition/front-end-application.html" class="list-group-item" target="_Blank"> Front end aplications</a>
       </div>
     </div>
+  <!-- Knowledge Finish -->
  
+  <!-- Programming skills Start --> 
     <div class="container" id="Programming">
-        <h1 class="header">PROGRAMMING SKILLS</h1>
+        <h1 class="header">Programming Skills</h1>
             <table>
                 <tr>
                     <th style="width:50%">Features</th>
@@ -83,7 +90,9 @@
                 </tr>
             </table> 
     </div>
-
+  <!-- Programming skills Finish -->
+  
+  <!-- Projects Start -->
     <div class="container" id="Projects">
       <div class="text-left">
         <h1>
@@ -121,10 +130,8 @@
         </div>
       </div>    
     </div>
+  <!-- Projects Finish -->
    
-    
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
