--- a/hojavida.html
+++ b/hojavida.html
@@ -105,10 +105,10 @@
       </div>
       <div class="row">
         <div class="col-sm-6"> 
-          <img src="./Images/project1.jfif" alt="direccion1">
+          <img src="./Images/project1.jfif" alt="Epilepsia">
         </div>
         <div class="col-sm-6"> 
-          <img src="./Images/project2.png" alt="direccion3">
+          <img src="./Images/project2.png" alt="Nidoo">
         </div>
         <div class="col-sm-6"> 
           <p class="parrafosp">
