--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </p>
           </div>
           <div class="col-sm-4">
-            <img id="profile-img" class="img-fluid" src="./Images/perfil.jpeg" alt="My photo">
+            <img id="profile-img" class="img-fluid" src="./Images/perfil.jpeg" alt="Profile photo">
           </div>
         </div>
     </div>
@@ -125,7 +125,7 @@
       <br>
       <div class="row">
         <div class="col-sm-4"> 
-          <img src="./Images/sport2.jpeg" alt="direccion1">
+          <img src="./Images/sport2.jpeg" alt="Equipo de rugby">
         </div>
         <div class="col-sm-4"> 
           <p class="parrafosHobbie">
@@ -136,7 +136,7 @@
           </p>
         </div>
         <div class="col-sm-4"> 
-          <img src="./Images/sport3.jpeg" alt="direccion3">
+          <img src="./Images/sport3.jpeg" alt="Equipo de futbol">
         </div>
         <div class="col-sm-4"> 
           <p class="parrafosHobbie">
@@ -148,7 +148,7 @@
           </p>
         </div>
         <div class="col-sm-4"> 
-          <img src="./Images/cod.jpg" alt="direccion3">
+          <img src="./Images/cod.jpg" alt="Videojuego call of duty">
         </div>
         <div class="col-sm-4"> 
           <p class="parrafosHobbie">
