--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="row">
           <div class="col-sm-8">
             <p  class="parrafos">                
-              Hi, my name is Juan Sebastian Cow Tibocha, 
+              Hi, my name is Juan Sebastian Vaca Tibocha, 
               I was born in Villavicencio, Meta. I am 20 years 
               old and I am studying systems engineering at the 
               university of los Andes.
@@ -92,13 +92,13 @@
       <br>
       <div class="row">
         <div class="col-sm-4 r">
-            <img class="rounded" src="./Images/sl1.jpg" alt="Gimnasio los ocobos" onclick="changeText(1)" />
+            <img class="rounded" src="./Images/sl1.jpg" alt="Gimnasio los ocobos" onclick="mostrarTexto(1)" />
         </div>
         <div class="col-sm-4">
-          <img class="rounded" src="./Images/sl2.png" alt=" Miami dade college" onclick="changeText(2)" >
+          <img class="rounded" src="./Images/sl2.png" alt=" Miami dade college" onclick="mostrarTexto(2)" >
         </div>
         <div class="col-sm-4">
-          <img class="rounded" src="./Images/sl3.png" alt=" Universidad de los andes" onclick="changeText(3)">
+          <img class="rounded" src="./Images/sl3.png" alt=" Universidad de los andes" onclick="mostrarTexto(3)">
         </div>
       </div>
     </div>
