--- a/hojavida.html
+++ b/hojavida.html
@@ -3,6 +3,9 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="description" content="Juan sebastian vaca Website" />
+    <meta name="keywords" content="Hobbies, " />
+    <meta name="author" content="Juan Sebastian Vaca" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
@@ -11,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Cantarell&display=swap" rel="stylesheet">
+    <link  rel="icon"   href=./Images/favicon.png type="image/png" />
+
 
     <title>Juan Sebastian Vaca</title>
     
