Comentarios sobre el archivo de index
Recomendación sobre los scripts, comentarios sobre el meta data, nombres de archivos, uso de Bootsrap y documentación.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!doctype html>
+<!-- Juan Felipe Torres: Me parece que está muy bien documentado, se entiende cada sección de la página y los nombres
+ para classes y ids, son pertinentes. No se que tan bueno o malo sea tener las carpetas en Mayúscula, pero yo siempre dejo
+ todo en minúscula. Bien haber agregado los tag de meta data y los alt de las imágenes. Buen uso de Boostrap pues la página
+ es responsive al abrirla en un dispositivo móvil. Y de pronto si la docuemntación está en inglés, ser consistente con eso
+ en las class o id.-->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -16,6 +21,8 @@
     <link href="https://fonts.googleapis.com/css?family=Coming+Soon&display=swap" rel="stylesheet">
     <link  rel="icon"   href=./Images/favicon.png type="image/png" />
     
+    <!-- Juan Felipe Torres: Creo que es recomendable poner todos los scripts al final de la página para evutar que al cargar
+     la página, alguna función se dañe por tu código en JavaScript -->
     <script src="Script/s.js"></script>
     <title>Juan Sebastian Vaca</title>   
   </head>
